crates/pg_syntax/tests/snapshots/postgres_regress/float8@140.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2147483647.6'::float8::int4;"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    TypeCast@7..35
      TypeCast@7..29
        AConst@7..21
          Sconst@7..21 "'2147483647.6'"
        Typecast@21..23 "::"
        TypeName@23..29
          Ident@23..29 "float8"
      Typecast@29..31 "::"
      TypeName@31..35
        Ident@31..35 "int4"
  Ascii59@35..36 ";"

