crates/pg_syntax/tests/snapshots/postgres_regress/float8@142.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-2147483648.6'::float8::int4;"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..36
    TypeCast@7..36
      TypeCast@7..30
        AConst@7..22
          Sconst@7..22 "'-2147483648.6'"
        Typecast@22..24 "::"
        TypeName@24..30
          Ident@24..30 "float8"
      Typecast@30..32 "::"
      TypeName@32..36
        Ident@32..36 "int4"
  Ascii59@36..37 ";"

