crates/pg_syntax/tests/snapshots/postgres_regress/float8@155.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function xfloat8out(xfloat8) returns cstring immutable strict\n  language internal as 'int8out';"
---
CreateFunctionStmt@0..102
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..26 "xfloat8out"
  Ascii40@26..27 "("
  FunctionParameter@27..34
    TypeName@27..34
      Ident@27..34 "xfloat8"
  Ascii41@34..35 ")"
  Whitespace@35..36 " "
  Returns@36..43 "returns"
  Whitespace@43..44 " "
  TypeName@44..51
    Ident@44..51 "cstring"
  Whitespace@51..52 " "
  DefElem@52..61
    Immutable@52..61 "immutable"
  Whitespace@61..62 " "
  DefElem@62..68
    StrictP@62..68 "strict"
  Newline@68..69 "\n"
  Whitespace@69..71 "  "
  DefElem@71..88
    Language@71..79 "language"
    Whitespace@79..80 " "
    Ident@80..88 "internal"
  Whitespace@88..89 " "
  DefElem@89..101
    As@89..91 "as"
    Whitespace@91..92 " "
    List@92..101
      Sconst@92..101 "'int8out'"
  Ascii59@101..102 ";"

